fixed horizontal scroll

--- a/dev/css/global.css
+++ b/dev/css/global.css
@@ -1803,14 +1803,19 @@ button {
   z-index: 2;
   text-decoration: none; }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden; }
+
 .brand_container {
   border: solid red 1px; }
 
 .video_container {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
-  max-height: 100vh; }
+  max-height: 100vh;
+  text-align: center; }
 
 .vid {
   overflow: hidden;
