--- a/dev/scss/hero.scss
+++ b/dev/scss/hero.scss
@@ -1,7 +1,8 @@
-
-// body{
-//     margin:0;
-// }
+//This is necessary to prevent horrizontal scrolling
+html, body{
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 .brand_container {
   border: solid red 1px;
@@ -9,16 +10,16 @@
 
 .video_container {
   position: relative;
-  width:100vw;
+  width:100%;
   height:50vh;
   max-height:100vh;
-  // text-align:center;
+  text-align:center;
 }
 
 .vid {
   overflow: hidden;
   position: absolute;
-  height:100%;
+  height: 100%;
   width:200%;
   left:-50%; 
 }
